--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <div class="container">
         <center><img class="logo" src="components/Kro-lanta-détouré.png"><center>
       <div class="grid">
-        <div class="case active">Un rouge fait de la merde</div>
+        <div class="case">Un rouge fait de la merde</div>
         <div class="case">Un rouge fait de la merde</div>
         <div class="case">Un rouge fait de la merde</div>
         <div class="case">Un rouge fait de la merde</div>
