--- a/index.html
+++ b/index.html
@@ -7,30 +7,30 @@
     <div class="container">
         <center><img class="logo" src="components/Kro-lanta-détouré.png"><center>
       <div class="grid">
-        <div class="case">Un rouge fait de la merde</div>
-        <div class="case">Un rouge fait de la merde</div>
-        <div class="case">Un rouge fait de la merde</div>
-        <div class="case">Un rouge fait de la merde</div>
-        <div class="case">Un rouge fait de la merde</div>
-        <div class="case">Un rouge fait de la merde</div>
-        <div class="case">Un rouge fait de la merde</div>
-        <div class="case">Un rouge fait de la merde</div>
-        <div class="case">Un rouge fait de la merde</div>
-        <div class="case">Un rouge fait de la merde</div>
-        <div class="case">Un rouge fait de la merde</div>
-        <div class="case">Un rouge fait de la merde</div>
-        <div class="case">Un rouge fait de la merde</div>
-        <div class="case">Un rouge fait de la merde</div>
-        <div class="case">Un rouge fait de la merde</div>
-        <div class="case">Un rouge fait de la merde</div>
-        <div class="case">Un rouge fait de la merde</div>
-        <div class="case">Un rouge fait de la merde</div>
-        <div class="case">Un rouge fait de la merde</div>
-        <div class="case">Un rouge fait de la merde</div>
-        <div class="case">Un rouge fait de la merde</div>
-        <div class="case">Un rouge fait de la merde</div>
-        <div class="case">Un rouge fait de la merde</div>
-        <div class="case">Un rouge fait de la merde</div>
+        <div class="case">Un jaune fait de la merde</div>
+        <div class="case">Une petite bronze sur la plage</div>
+        <div class="case">Quelqu'un se blesse</div>
+        <div class="case">Quelqu'un dit "Cette épreuve elle est pour moi"</div>
+        <div class="case">Denis met le doigt là où ça fait mal</div>
+        <div class="case">Denis dit "AH!"</div>
+        <div class="case">Un aventurier trouve une arme secrète</div>
+        <div class="case">Une épreuve avec des règles trop compliquées</div>
+        <div class="case">"Ma famille me manque"</div>
+        <div class="case">Quelqu'un pleure en interview</div>
+        <div class="case">Quelqu'un crache son venin en interview</div>
+        <div class="case">Gros plan sur un cul</div>
+        <div class="case">Un aventurier dit qu'il ou elle a faim</div>
+        <div class="case">"Je le fait pour ma famille"</div>
+        <div class="case">Trahison surprise #Juda</div>
+        <div class="case">Il pleut sur le camp</div>
+        <div class="case">Quelqu'un mange trop</div>
+        <div class="case">Embrouille sur le camp</div>
+        <div class="case">Un aventurier éclaté gagne une épreuve</div>
+        <div class="case">Quelqu'un a le seum après une épreuve</div>
+        <div class="case">Remarque mysogine</div>
+        <div class="case">Quelqu'un échoue a mettre en place une stratégie</div>
+        <div class="case">Un aventurier n'en branle pas une sur le camp</div>
+        <div class="case">Le feu est en danger!</div>
         <div class="case">Un rouge fait de la merde</div>
       </div>
     </div>
