--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="components/style.css">
+    <link rel="shortcut icon" href="components/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="components/favicon.ico" type="image/x-icon">
   </head>
   <body>
     <div class="container">
